UI does not update as expected - (context is wrong - update is delayed) #35600

Closed
opened 2013-06-02 09:37:15 +02:00 by Alexander N. · 24 comments
Member

%%%--- Operating System, Graphics card ---
system1: Windows 7 64bit, i7-3770 internal GPU (HD4000)
system2: Windows 7 64bit, AMD HD5670

- Blender version with error, and version that worked ---

blender-2.65a-windows64, with issue;
blender-2.66a-windows64, with issue;
blender-2.67b-windows64, with issue;

- Short description of error ---

the user interface (UI) is not updating its content and its list item source context as expected - its update is delayed.

in my case, especially visible, when you have an armature and you add an "inverse kinematics" bone constraint to a bone and choose an armature as target.
than the IK control panel changes directly under the mouse cursor. when you now try to select the bone within of that armature, it can happen, that a wrong list of available items will be shown to you.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

see the attached video...

  1. create an armature
    (2. change to edit mode)
    (3. add some bones)
  2. change to pose mode
  3. add an "inverse kinematics" bone constraint
  4. change the IK target to "Armature" by using the mouse - (click to "Armature" in the list)
    ... the "Armature" list entry is directly at the position, were the "Bone" subtarget will appears.
    ... leave the mouse cursoe at that position or do not move the mouse cursor too far after selection of "Armature".
  5. when you now try to open the list of available subtarget items of the armature target, you get the wrong list of available pole_target items to see.
    ... it seems, that not all content/context is updated/refreshed at the same time. visually the ui is updated, but its mouse click events receives old positions of the controls as they were before the subtarget control appears.

the situation will get normal (visual and underlying context will be the same) just when the mouse cursor will cross the border of an control region. that will trigger an update/refresh of all stuff to get sync
(... thats what i think.)%%%

%%%--- Operating System, Graphics card --- system1: Windows 7 64bit, i7-3770 internal GPU (HD4000) system2: Windows 7 64bit, AMD HD5670 - Blender version with error, and version that worked --- blender-2.65a-windows64, with issue; blender-2.66a-windows64, with issue; blender-2.67b-windows64, with issue; - Short description of error --- the user interface (UI) is not updating its content and its list item source context as expected - its update is delayed. in my case, especially visible, when you have an armature and you add an "inverse kinematics" bone constraint to a bone and choose an armature as target. than the IK control panel changes directly under the mouse cursor. when you now try to select the bone within of that armature, it can happen, that a wrong list of available items will be shown to you. - Steps for others to reproduce the error (preferably based on attached .blend file) --- see the attached video... 1. create an armature (2. change to edit mode) (3. add some bones) 4. change to pose mode 5. add an "inverse kinematics" bone constraint 6. change the IK target to "Armature" by using the mouse - (click to "Armature" in the list) ... the "Armature" list entry is directly at the position, were the "Bone" subtarget will appears. ... leave the mouse cursoe at that position or do not move the mouse cursor too far after selection of "Armature". 7. when you now try to open the list of available subtarget items of the armature target, you get the wrong list of available pole_target items to see. ... it seems, that not all content/context is updated/refreshed at the same time. visually the ui is updated, but its mouse click events receives old positions of the controls as they were before the subtarget control appears. the situation will get normal (visual and underlying context will be the same) just when the mouse cursor will cross the border of an control region. that will trigger an update/refresh of all stuff to get sync (... thats what i think.)%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%I can not ever redo it, checked the video (saw error) and used your blend file. The steps you write are not fully clear to me though. Here is my version:

  • load your file, remove the IK
  • add new IK constraint
  • set target to own armature
  • click on bone menu (with minimal or no mouse moves)

Always goes ok. (Mac osx 10.7, release and current svn)

It is as if the mouse coordinates go wrong after using a menu?%%%

%%%I can not ever redo it, checked the video (saw error) and used your blend file. The steps you write are not fully clear to me though. Here is my version: - load your file, remove the IK - add new IK constraint - set target to own armature - click on bone menu (with minimal or no mouse moves) Always goes ok. (Mac osx 10.7, release and current svn) It is as if the mouse coordinates go wrong after using a menu?%%%
Author
Member

%%%i installed Linux (ubuntu 13.04) and blender 2.67b (blender-2.67b-linux-glibc211-x86_64.tar.bz2) on the same system as system 1.

i can NOT reproduce the first issue of the video of the IK constraint and the subtarget list.

BUT: i can reproduce the second issue of the video - when renaming a bone, its name in the outliner is not updating immediately.%%%

%%%i installed Linux (ubuntu 13.04) and blender 2.67b (blender-2.67b-linux-glibc211-x86_64.tar.bz2) on the same system as system 1. i can NOT reproduce the first issue of the video of the IK constraint and the subtarget list. BUT: i can reproduce the second issue of the video - when renaming a bone, its name in the outliner is not updating immediately.%%%
Author
Member

%%%i tested on a third system:
system 3: Windows 7 64bit, nVidia Quadro FX 570M

there i can reproduce all the issues again.

conclusion:
system 1: Windows 64, i7-3770 internal GPU (HD4000), blender-2.67b-windows64.zip
system 2: Windows 7 64bit, AMD HD5670, blender-2.67b-windows64.zip
system 3: Windows 7 64bit, nVidia Quadro FX 570M, blender-2.67b-windows64.zip
are having both issues, the first in the IK constraint and the second with the delayed bone renaming in the outliner

system 1a: Ubuntu 13.04 64bit, i7-3770 internal GPU (HD4000), blender-2.67b-linux-glibc211-x86_64.tar.bz2
is having only the second issue with the delayed bone renaming in the outliner
%%%

%%%i tested on a third system: system 3: Windows 7 64bit, nVidia Quadro FX 570M there i can reproduce all the issues again. conclusion: system 1: Windows 64, i7-3770 internal GPU (HD4000), blender-2.67b-windows64.zip system 2: Windows 7 64bit, AMD HD5670, blender-2.67b-windows64.zip system 3: Windows 7 64bit, nVidia Quadro FX 570M, blender-2.67b-windows64.zip are having both issues, the first in the IK constraint and the second with the delayed bone renaming in the outliner system 1a: Ubuntu 13.04 64bit, i7-3770 internal GPU (HD4000), blender-2.67b-linux-glibc211-x86_64.tar.bz2 is having only the second issue with the delayed bone renaming in the outliner %%%
Member

%%%The delayed bone renaming is completely unrelated, that is a missing redraw signal.

The first issue seems to me a bug in how the Windows version handles mouse coordinates after using a popup.
You should be able to redo similar issues for any button that pops up menus?%%%

%%%The delayed bone renaming is completely unrelated, that is a missing redraw signal. The first issue seems to me a bug in how the Windows version handles mouse coordinates after using a popup. You should be able to redo similar issues for any button that pops up menus?%%%
Author
Member

%%%the first issue i could only observe on that inverse kinematic constraint.
i think it is a very specific issue and is very depended to few situations.

  1. a popup (list) overlays an text field
    (the list of KinematicConstraint.target overlays the textfield of KinematicConstraint.pole_target)

  2. selecting an item in that popup must result in a change in of the panel under the popup, exactly at the same position, where the selected list item was and you released the mouse button. in my case, you must select an item that
    a.) is at the first position in the list and
    b.) must have sub items, that cause to add an extra text field to the panel
    (when you select the first item in the list, the mouse cursor is exactly over the position of the ".pole_target" text field. if the selected item is an object with sub items, e.g. Amature has bones as sub items, an additional text field appears exact under the just selected list item - under the mouse cursor, where the ".pole_target" text field was before.)

  3. after selecting the list item, the popup overlay disappears and the mouse cursor is now in the just newly appeared ".subtarget" text field.
    when you DON'T leave that text field region with the mouse cursor, you will see the wrong popup list from the ".pole_target" instead of the ".subtarget".
    (when you want to get the correct popup overlay (list) of the ".subtarget", you must leave the border of the subtarget text field region first - then you can see list that you expected)

i tried out several other constraints (all pose bone constraints), but i didn't found any other similar constraint/panel/situation where all these dependencies/constellations came together - my blender knowledge is not so good, that i knew other panels with the same constellation of popups and panel changes.
any suggestions, that panels i could test?

(from previous posts i know, that my english is not very well - but i always try to describe an issue as detailed and precise as possible - with the risk, that my description will be more confusing than helpful - sorry, but i can't explain complex things easy with limited english knowledge)%%%

%%%the first issue i could only observe on that inverse kinematic constraint. i think it is a very specific issue and is very depended to few situations. 1. a popup (list) overlays an text field (the list of KinematicConstraint.target overlays the textfield of KinematicConstraint.pole_target) 2. selecting an item in that popup must result in a change in of the panel under the popup, exactly at the same position, where the selected list item was and you released the mouse button. in my case, you must select an item that a.) is at the first position in the list and b.) must have sub items, that cause to add an extra text field to the panel (when you select the first item in the list, the mouse cursor is exactly over the position of the ".pole_target" text field. if the selected item is an object with sub items, e.g. Amature has bones as sub items, an additional text field appears exact under the just selected list item - under the mouse cursor, where the ".pole_target" text field was before.) 3. after selecting the list item, the popup overlay disappears and the mouse cursor is now in the just newly appeared ".subtarget" text field. when you DON'T leave that text field region with the mouse cursor, you will see the wrong popup list from the ".pole_target" instead of the ".subtarget". (when you want to get the correct popup overlay (list) of the ".subtarget", you must leave the border of the subtarget text field region first - then you can see list that you expected) i tried out several other constraints (all pose bone constraints), but i didn't found any other similar constraint/panel/situation where all these dependencies/constellations came together - my blender knowledge is not so good, that i knew other panels with the same constellation of popups and panel changes. any suggestions, that panels i could test? (from previous posts i know, that my english is not very well - but i always try to describe an issue as detailed and precise as possible - with the risk, that my description will be more confusing than helpful - sorry, but i can't explain complex things easy with limited english knowledge)%%%
Author
Member

%%%i tried to provoke this first issue, by rebuild a similar panel with similar conditions by script (see the attached "ui-update-issue test v1.blend" ).
but without success, whit that i can NOT reproduce the behavior of the issue...
when i change the "Row 1" in the same way as in "IK constraint" and open the new appeared "Row 2", i get the correct list of bones to see... ?!?!
... any other ideas?
... did somebody else observe the same behavior - or is it only me?%%%

%%%i tried to provoke this first issue, by rebuild a similar panel with similar conditions by script (see the attached "ui-update-issue test v1.blend" ). but without success, whit that i can NOT reproduce the behavior of the issue... when i change the "Row 1" in the same way as in "IK constraint" and open the new appeared "Row 2", i get the correct list of bones to see... ?!?! ... any other ideas? ... did somebody else observe the same behavior - or is it only me?%%%
Author
Member

%%%... attached a video "Ui-update-issue Test V1.mp4" for previous post (Date: 2013-06-08 08:37)%%%

%%%... attached a video "Ui-update-issue Test V1.mp4" for previous post (Date: 2013-06-08 08:37)%%%
Member

%%%The tracker is flooding with issues, but I noticed your updates. We just need someone using Windows to dig into in the issue.%%%

%%%The tracker is flooding with issues, but I noticed your updates. We just need someone using Windows to dig into in the issue.%%%
Author
Member

%%%thanks Ton, ya i saw in the dev meeting notes, that there are many open issues - when the masters ask for more reports, the audience is following the call ;)

in the meantime i run a additional test with "blender-2.67b-windows32.zip", only to see if the issue is 64/32bit build related.
but is happens also with that version - so, it is not related to 64/32bit build.

i didn't know, that windows devs are so rarely at BF - maybe now i know, why the windows build bot is currently not as up to date as the other builds...
for that "exotic" OS, the windows build works very well (i know other open source projects where the windows build is a mess compared of the linux one).%%%

%%%thanks Ton, ya i saw in the dev meeting notes, that there are many open issues - when the masters ask for more reports, the audience is following the call ;) in the meantime i run a additional test with "blender-2.67b-windows32.zip", only to see if the issue is 64/32bit build related. but is happens also with that version - so, it is not related to 64/32bit build. i didn't know, that windows devs are so rarely at BF - maybe now i know, why the windows build bot is currently not as up to date as the other builds... for that "exotic" OS, the windows build works very well (i know other open source projects where the windows build is a mess compared of the linux one).%%%

%%%ok its to to get, but i can reproduce this little refresh error, when i do not move my mouse after clicking armature

win 7 64bit (ger)
blender 2.67b r56533%%%

%%%ok its to to get, but i can reproduce this little refresh error, when i do not move my mouse after clicking armature win 7 64bit (ger) blender 2.67b r56533%%%

%%%Confirmed the bug on Windows 8.
The "Armature" lookup that shows up is in fact the one for the "Pole Target" (as kind of described above, but I just wanted to make that clear).

So even though my mouse is over:
"pose.bones["Bone.001"].constraints["pose.bones["Bone.001"].constraints["Const"].pole_target"].subtarget"

What I get in the lookup (or if I RMB click + Copy Data Path) is in fact:
"pose.bones["Bone.001"].constraints["Const"].pole_target"

I got a dev environment on Windows here, if there is something I can try let me know.%%%

%%%Confirmed the bug on Windows 8. The "Armature" lookup that shows up is in fact the one for the "Pole Target" (as kind of described above, but I just wanted to make that clear). So even though my mouse is over: "pose.bones["Bone.001"].constraints["pose.bones[\"Bone.001\"].constraints[\"Const\"].pole_target"].subtarget" What I get in the lookup (or if I RMB click + Copy Data Path) is in fact: "pose.bones["Bone.001"].constraints["Const"].pole_target" I got a dev environment on Windows here, if there is something I can try let me know.%%%

Added subscriber: @Sergey

Added subscriber: @Sergey

Does it still happen with 2.69 release and current development builds from http://builder.blender.org/download/ ?

Does it still happen with 2.69 release and current development builds from http://builder.blender.org/download/ ?
Author
Member

yes, all issues are still there with "blender-2.69-15f449c-win64.zip" on Windows 8.1 64 bit
(the issue with the IK constraint, and the issue with delayed updating name)

yes, all issues are still there with "blender-2.69-15f449c-win64.zip" on Windows 8.1 64 bit (the issue with the IK constraint, and the issue with delayed updating name)

Added subscriber: @mvgulik

Added subscriber: @mvgulik

The delayed updating issue seems similar to what I'm seeing. So adding my comment to this bug report. (not familiar with all the bug search features/inputs)

From a visual point of view it seems to me that the video display is flipping between showing the final screen AND the last buffered/previous screen. (when moving the mouse paste some UI area border)

Issue as of Blender 2.65. (that's 2.65.?|zero, aka: the one before 2.65.A)

  • (Including Blender 2.70.RC1)
  • (Ergo: version 2.64 being the last that did not had this issue)

OS: Windows XP
Video: Intel 82915G/GV/910GL Express Chipset Family (old and kinda bugged intel product)

I'm not a real Blender user. Just have it installed/available as potential on the side tool. But have not used it in a long time now. (never got comfortable with finding my way around the Blender UI)

The delayed updating issue seems similar to what I'm seeing. So adding my comment to this bug report. (not familiar with all the bug search features/inputs) From a visual point of view it seems to me that the video display is flipping between showing the final screen AND the last buffered/previous screen. (when moving the mouse paste some UI area border) Issue as of Blender 2.65. (that's 2.65.?|zero, aka: the one before 2.65.A) - (Including Blender 2.70.RC1) - (Ergo: version 2.64 being the last that did not had this issue) OS: Windows XP Video: Intel 82915G/GV/910GL Express Chipset Family (old and kinda bugged intel product) I'm not a real Blender user. Just have it installed/available as potential on the side tool. But have not used it in a long time now. (never got comfortable with finding my way around the Blender UI)

Added subscriber: @mont29

Added subscriber: @mont29

FYI, 295bc1249a fixes the outliner refresh issue.

FYI, 295bc1249a fixes the outliner refresh issue.

@beta-tester could you please check whether issue is still present in latest master (builds from our buildbot)?

@beta-tester could you please check whether issue is still present in latest master (builds from [our buildbot](http://builder.blender.org/download))?

For what it's worth. UI seems to be back to normal on this side.

For what it's worth. UI seems to be back to normal on this side.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Bastien Montagne self-assigned this 2014-09-02 14:01:41 +02:00

Ok, will assume this one is fixed for now.

Ok, will assume this one is fixed for now.
Author
Member

@mont29: oh, sorry, i did not noticed that you asked me something...
(most of the developer email notifications are classified as spam in GMX.)
i just tested it with the recent build bot version:
blender-2.71-4f7caab-linux-glibc211-x86_64.tar.bz2
and
blender-2.71-35bc266-win64.zip

YES, it is fixed thank you.

@mont29: oh, sorry, i did not noticed that you asked me something... (most of the developer email notifications are classified as spam in GMX.) i just tested it with the recent build bot version: blender-2.71-4f7caab-linux-glibc211-x86_64.tar.bz2 and blender-2.71-35bc266-win64.zip YES, it is fixed thank you.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35600
No description provided.