Fix part of T35600: Outliner did not update when renaming armature bone names.